test/neg/conj-rhs.msmt_
; Sorts


; Constants




; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall () (=> True False)))

